--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -159,10 +159,10 @@
                             <label for="camp_story">Your Story</label>
                             <textarea class="form-control" name="camp_story" rows="4"></textarea>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="form-label" for="camp_photo">Upload fundraiser photo</label>
                             <input type="file" class="form-control" name="camp_photo" />
-                        </div>
+                        </div> -->
                         <div class="address-block">
                             <div style="padding: 5px">
                                 <label for="camp_gender">Gender</label>
