--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -64,7 +64,7 @@
         <div class="col2">
             <div class="sidebar-steps style-UDfJt" id="style-UDfJt2">
                 <div class="step active" onclick="navigateToStep(1)">
-                    <form class="text1" action="{{url_for('views.campaign')}}" method="POST">
+                    <form class="text1" action="{{url_for('views.campaign')}}" method="POST" enctype="multipart/form-data">
                         <h3>Fundraiser information</h3>
                         <div class="form-group">
                             <label for="camp_name">Fundraiser title</label>
@@ -159,10 +159,10 @@
                             <label for="camp_story">Your Story</label>
                             <textarea class="form-control" name="camp_story" rows="4"></textarea>
                         </div>
-                        <!-- <div class="form-group">
+                        <div class="form-group">
                             <label class="form-label" for="camp_photo">Upload fundraiser photo</label>
                             <input type="file" class="form-control" name="camp_photo" />
-                        </div> -->
+                        </div>
                         <div class="address-block">
                             <div style="padding: 5px">
                                 <label for="camp_gender">Gender</label>
