--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -33,12 +33,10 @@
                 <a class="nav-link" href="{{url_for('views.campaign')}}">Campaign</a>
               </li>
               {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{{url_for('views.dashboard')}}">Dashboard</a>
+              <li class="nav-item" id="user-profile">
+                <!-- User profile will be dynamically inserted here -->
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a>
-              </li>
+              
               {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('auth.logout')}}">Login / Signup</a>
@@ -59,6 +57,28 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script>
+    const user = {
+        name: "{{ user.name }}",
+        imageSrc: 'path/to/user/image.jpg' // Replace with actual user image path
+    };
+
+    const userContainer = document.getElementById('user-profile');
+    if (userContainer) {
+        userContainer.innerHTML = `
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              ${user.name}
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#">Profile Setting</a></li>
+              <li><a class="dropdown-item" href="{{url_for('views.dashboard')}}">Dashboard</a></li> <!-- Close double curly braces -->
+              <li><a class="dropdown-item" href="{{url_for('auth.logout')}}">Logout</a></li> <!-- Close double curly braces -->
+            </ul>
+          </div>
+        `;
+    }
+</script>
 </body>
 
 </html>
