--- a/AmarDaan/templates/user_form.html
+++ b/AmarDaan/templates/user_form.html
@@ -17,7 +17,7 @@
           <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <span>or use your email for registration</span>
-        <input class="round" type="text" name="text" placeholder="Name" />
+        <input class="round" type="text" name="name" placeholder="Name" />
         <input class="round" type="email" name="email" placeholder="Email" />
         <input class="round" type="password" name="password" placeholder="Password" />
         <button>Sign Up</button>
