--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -9,7 +9,7 @@
             <div class="sidebar-steps style-UDfJt" id="style-UDfJt1">
                 <div class="step active" onclick="navigateToStep(1)">
                     <a class="step-header">
-                        <span class="btn btn-circle btn-edit" id="st1-circle">
+                        <span class="camp-btn btn-circle btn-edit" id="st1-circle">
                             1
                         </span>
                         <div class="step-title">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="step" onclick="navigateToStep(2)">
                     <a class="step-header">
-                        <span class="btn btn-circle" id="st2-circle">
+                        <span class="camp-btn btn-circle" id="st2-circle">
                             2
                         </span>
                         <div class="step-title">
@@ -35,7 +35,7 @@
                 </div>
                 <div class="step" onclick="navigateToStep(3)">
                     <a class="step-header">
-                        <span class="btn btn-circle" id="st3-circle">
+                        <span class="camp-btn btn-circle" id="st3-circle">
                             3
                         </span>
                         <div class="step-title">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="step" onclick="navigateToStep(4)">
                     <a class="step-header">
-                        <span class="btn btn-circle" id="st4-circle">
+                        <span class="camp-btn btn-circle" id="st4-circle">
                             4
                         </span>
                         <div class="step-title">
@@ -215,7 +215,7 @@
                             <option value="Instagram">Instagram</option>
                             <option value="others">Others</option>
                             </select><br/>
-                            <button type="submit" value="Submit" class="btn-submit">Submit</button>
+                            <button type="submit" value="Submit" class="btn btn-primary" style="width: 100%;">Submit</button>
                         </div>
                         <!-- Add other form fields as needed -->
                     </div>
