--- a/amardaan/templates/dashboard.html
+++ b/amardaan/templates/dashboard.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block link %}
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/dashboard.css')}}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dashboard.css') }}">
 {% endblock %}
+
 {% block content %}
 <body>
     <div class="div-body">
@@ -13,37 +14,43 @@
                         </a>
                         <ul class="navbari-nav">
                             <li>
-                                <a class="active"><i class="bi bi-house icon"></i><span>Home</span></a>
+                                <a href="{{ url_for('views.home') }}"><i class="bi bi-house icon"></i><span>Home</span></a>
                             </li>
                             <li>
-                                <a><i class="bi bi-bar-chart icon"></i><span>Statistics</span></a>
+                                <a href="#"><i class="bi bi-bar-chart icon"></i><span>Statistics</span></a>
                             </li>
                             <li>
-                                <a><i class="bi bi-chat-left-dots icon"></i><span>Messages</span></a>
+                                <a href="#"><i class="bi bi-chat-left-dots icon"></i><span>Messages</span></a>
                             </li>
                             <li>
-                                <a><i class="bi bi-person-check icon"></i></i><span>Profile</span></a>
+                                <a href="#"><i class="bi bi-person-check icon"></i><span>Profile</span></a>
                             </li>
                             <li>
-                                <a><i class="bi bi-file-earmark-text icon"></i><span>Documents</span></a>
+                                <a href="#"><i class="bi bi-file-earmark-text icon"></i><span>Documents</span></a>
                             </li>
                         </ul>
                     </nav>
                 </div>
-
             </div>
             <div class="col2">
-                <div class="p-header">
-                    <h2>Edit user profile</h2>
-                    <h5>Edit your profile with the latest info</h5>
-                </div>
-                <div class="p-header-bg">
+                <div class="col2">
+                    <div class="inside-col-div">
+                        <div class="in-col1">
+                            <div class="user-profile">
+                                {% for camp in user.campaigns %}
+                                <h2>{{user.name}}</h2>
+                                <img src="{{ url_for('static', filename='uploads/'+ camp.camp_photo) }}" alt="User Photo">
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="in-col2">
 
-                </div>
 
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </body>
-
 {% endblock %}
